welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:-3: error: Unmatched closing brace '}' ignored here
	}
        ^Program:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^